--- a/css/things-to-do.css
+++ b/css/things-to-do.css
@@ -15,10 +15,10 @@
     height: 100%;
 }
 
-.lightbox {
+/* .lightbox {
     aspect-ratio: 3 / 2;
     height: fit-content !important;
-}
+} */
 
 @media only screen and (min-width: 768px) {
   
@@ -34,9 +34,9 @@
         aspect-ratio: 3 / 2;
     }
 
-    .lightbox {
+    /* .lightbox {
         max-width: 800px;
         left: calc(50% - 400px);
         bottom: calc(25% - 100px);
-    }
+    } */
 }
